Section title covered by navbar fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
   text-decoration: none !important;
   font-family: "Poppins";
   scroll-behavior: smooth;
+  scroll-padding-top: 70px;
 }
 
 .custom-img {
